Fixes #835 - Fixed the existing issue with flex box in Firefox and Edge browsers. Also fixed an issue with overflow for available list of outputs

--- a/src/client/flogo/flow/triggers/configurator/configurator.component.less
+++ b/src/client/flogo/flow/triggers/configurator/configurator.component.less
@@ -30,11 +30,10 @@
 }
 
 .trigger-configuration__content {
-  flex: 1;
-}
-
-.trigger-configuration__content {
   display: flex;
+  // Fix the issue with Edge and Mozilla browsers which has problem with scroll content of a flex element
+  height: 100%;
+  min-height: 0;
 }
 
 .configuration__triggers {
